// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPair component creates the right context value - dark theme 1`] = `
<div
  class="ColorPair ColorPair--black"
>
  <span>
    type: 
    dark
    , theme: 
    black
  </span>
</div>
`;

exports[`ColorPair component creates the right context value - light theme 1`] = `
<div
  class="ColorPair ColorPair--white"
>
  <span>
    type: 
    light
    , theme: 
    white
  </span>
</div>
`;

exports[`ColorPair component renders correctly 1`] = `
<div
  class="ColorPair ColorPair--white"
>
  Lorem ipsum
</div>
`;

exports[`ColorPair component renders with a custom component 1`] = `
<span
  class="ColorPair ColorPair--teal-500"
>
  Lorem ipsum
</span>
`;

exports[`ColorPair component renders with a custom element 1`] = `
<span
  class="ColorPair ColorPair--teal-500"
>
  Lorem ipsum
</span>
`;

exports[`ColorPair component renders with a theme 1`] = `
<div
  class="ColorPair ColorPair--teal-500"
>
  Lorem ipsum
</div>
`;
